# weverything

./: README.md  warn-everything.cmake
cmake/: warn-everything-clang.cmake  warn-everything-gcc.cmake  warn-everything.cmake
example/: CMakeLists.txt
